--- a/main.html
+++ b/main.html
@@ -5,9 +5,13 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<title>Favourite Song</title>
 
 <body>
 	<!-- the entire body must be written by student -->
+<div>
+        <p>My current favourite song is <a href="https://www.youtube.com/watch?v=2FhgKp_lfJQ" target="_blank"> Afsos </a>.</p>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
